Ajuste epi.config

--- a/front/epi.conf
+++ b/front/epi.conf
@@ -1,6 +1,6 @@
 server {
 
-        server_name _;
+        server_name 209.50.51.139;
         root /usr/share/nginx/html;
         index index.html;
         
@@ -17,8 +17,4 @@ server {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-
-        location ~ /(.*)? {
-            try_files $uri $uri/ /index.html;
-        }
 }
